# comp_with_agent

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.gemini/: settings.json
agent/mcp/: config.json  main.py
agent/mcp/components/analysis_executor/: tools.py
agent/mcp/components/data_information/: tools.py
agent/mcp/components/function_executor/: tools.py
agent/mcp/components/io/: tools.py
agent/mcp/components/io/tools/: data_info.py
agent/mcp/components/notebook_writer/: tools.py
agent/mcp/servers/: analysis_executor.py  data_information.py  function_executor.py  io.py  notebook_writer.py
document/memory/: CLAUDE_slide.md
examples/: drought_prediction_eda.html
prompts/: operation_check.md
slidev/: package-lock.json  package.json  slides.md
slidev/draft/: draft.yaml  prompt.md
slidev/pages/: agenda.md  demo.md  drought-prediction.md  final.md  hypothesis-process.md  llm-assistant.md  made-it.md  mcp-server.md  one-step-missing.md  section-1.md  section-2.md  section-3.md  section-4.md  section-5.md  self-introduction.md  summary.md  system-architecture.md  three-walls.md  tool-1.md  tool-2.md  tool-3.md  touch-data.md
tests/agent/mcp/components/analysis_executor/: test_analysis_executor_tools.py
tests/agent/mcp/components/data_information/: test_data_information_tools.py
tests/agent/mcp/components/notebook_writer/: test_notebook_writer_tools.py
