[project]
name = "comp-with-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "polars>=1.31.0",
    "pretty-errors>=1.2.25",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "scikit-learn==1.7.1",
    "seaborn>=0.13.2",
]

[tool.ruff]
ignore = ["E731"]
line-length = 120
